--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
 								<!-- {% if  not request.user.is_authenticated %} -->
                 <a href="{% url 'login' %}" class="nav-link" >Login</a>
 								<!-- {% else %} -->
-								<a href="{% url 'logout' %}" class="nav-link">Logout</a>
+								<!-- <a href="{% url 'logout' %}" class="nav-link">Logout</a> -->
 								<!-- {% endif %} -->
 							</li>
 						</ul>
@@ -50,8 +50,8 @@
 				</div>
                 <div class="col-lg-1 col-md-1 col-sm-3 icon-panel">
                    <div><img src="../assets/images/pdf-icon.svg" /></div>
-                    <div><img src="../assets/page.svg" /></div>
-                    <div><img src="../assets/txt-icon.svg" /></div>
+                    <div><img src="../assets/images/page.svg" /></div>
+                    <div><img src="../assets/images/txt-icon.svg" /></div>
                 </div>
                 <div class="col-lg-1 col-md-1 col-sm-3 circle-panel">
                     <div class="circle">
@@ -68,7 +68,7 @@
 			<h2 class="middle-title">Four ways to help you research easier</h2>
 			<section class="row middle-banner">
 				<div class="col-sm-12 col-md-2 col-lg-1 nopadding">
-					<img src="../assets/page.svg" />
+					<img src="../assets/images/page.svg" />
 				</div>
 				<div class="col-sm-12 col-md-10 col-lg-8">
 					<div class="row">
@@ -102,12 +102,12 @@
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-2 col-lg-1 nopadding ml5">
-					<img src="../assets/bookmark.svg" />
+					<img src="../assets/images/bookmark.svg" />
 				</div>
 			</section>
 			<section class="row middle-banner">
 				<div class="col-sm-12 col-md-2 col-lg-1 nopadding">
-					<img src="../assets/loop.svg" />
+					<img src="../assets/images/loop.svg" />
 				</div>
 				<div class="col-sm-12 col-md-10 col-lg-8">
 					<div class="row">
@@ -141,7 +141,7 @@
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-2 col-lg-1 nopadding">
-					<img src="../assets/page.svg" />
+					<img src="../assets/images/page.svg" />
 				</div>
 			</section>
 			<section class="slider-section">
@@ -157,27 +157,27 @@
                          </ul>
                			<a class="carousel-control-prev" href="#demo" data-slide="prev">
 							<span class="carousel-control-prev-icon"></span>
-						</a>
+            </a>
 							<!-- The slideshow -->
 							<div class="carousel-inner">
 								<div class="carousel-item row active">
 									<div class="row">
 										<div class="col-lg-12 slider-box">
-											<img src="../assets/slider-item.png" alt="slider-item">
+											<img src="../assets/images/slider-item.png" alt="slider-item">
 										</div>
 									</div>
 								</div>
 								<div class="carousel-item row">
 									<div class="row">
 										<div class="col-lg-12 slider-box">
-											<img src="../assets/slider-item.png" alt="slider-item" >
+											<img src="../assets/images/slider-item.png" alt="slider-item" >
 										</div>
 									</div>
 								</div>
 								<div class="carousel-item row">
 									<div class="row">
 										<div class="col-lg-12 slider-box">
-											<img src="../assets/slider-item.png" alt="slider-item">
+											<img src="../assets/images/slider-item.png" alt="slider-item">
 										</div>
 									</div>
 								</div>
