--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<div class="wrapper">
+	<div class="generic-body">
+        <router-outlet></router-outlet>
+    </div>
+</div>
