--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,4 @@
-<div class="wrapper">
-	<div class="generic-body">
+
 		<header>
       <!-- Todo -->
 			<!-- {% include 'partials/alerts.html' %} -->
@@ -18,9 +17,9 @@
 							<li class="nav-item">
                 <!-- check todo keep if else logic-->
 								<!-- {% if  not request.user.is_authenticated %} -->
-				<a routerLink="/login" class="nav-link" >Login</a>
+					<a *ngIf="!isLoggedIn" routerLink="/login" class="nav-link" >Login</a>
 								<!-- {% else %} -->
-								<!-- <a href="{% url 'logout' %}" class="nav-link">Logout</a> -->
+					<a *ngIf="isLoggedIn" (click)= "logout()" class="nav-link">Logout</a>
 								<!-- {% endif %} -->
 							</li>
 						</ul>
@@ -247,4 +246,3 @@
 			</ul>
 			<p class="text-center copyright">© 2019 Sensai, All Rights Reserved.</p>
 		</footer>
-</div>
