Environmet api URL set

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -44,7 +44,7 @@
                       <div class="btn-decoration"> <span>Login</span> </div>
                       <button type="submit" class="btn btn-primary generic-btn">Login</button>
                       <div class="sign-up-details">
-                          <a routerLink="/register" class="nav-link signup-btn"> Register</a> <span>  if you don't have an account.</span>
+                          <a routerLink="/register" class="nav-link signup-btn"> Register</a> <span>If you don't have an account.</span>
                       </div>
                   </form>
 
