--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -13,7 +13,16 @@ mat-form-field {
   margin-top: 40px;
 }
 
-.login_button {
-  margin-top :  30px;
-  width: 30%;
+.center {
+  position: relative;
+}
+.center-div{
+  margin: auto;
+  width: 100%;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 80vh;
 }
