--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,9 +2,9 @@
 
   <div class="modal" id="login">
 
-      <div class="modal-dialog generic-modal">
+      <div class="modal-dialog generic-modal center">
 
-          <div class="modal-content">
+          <div class="modal-content center-div">
 
               <div class="modal-body">
                   <form [formGroup]="loginFrom" (ngSubmit)="onSubmit()">
@@ -12,7 +12,6 @@
                       <div class="form-group">
                           <mat-card>
                               <mat-card-content>
-                                  <form [formGroup]="loginFrom" (ngSubmit)="onSubmit()">
                                       <!-- <h2>Log In</h2> -->
                                       <mat-error *ngIf="loginInvalid">
                                           The username and password were not recognised
@@ -30,7 +29,7 @@
                                           </mat-error>
                                       </mat-form-field>
                                       <!-- <button class="login_button" mat-raised-button color="primary">Login</button> -->
-                                  </form>
+                                  
                               </mat-card-content>
                           </mat-card>
                       </div>
