--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -2,11 +2,29 @@ mat-card {
     width: 100%;
     margin: 2em auto;
     text-align: center;
-    height: 50vh;
+    height: 40vh;
     margin-top: 20px;
   }
   
   mat-form-field {
     display: block;
-    margin-top: 40px;
+    margin-top: 1px;
+  }
+
+  .center {
+    position: relative;
+  }
+  .center-div{
+    margin: auto;
+    width: 100%;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 75%;
+  }
+
+  .checkbox-cust {
+    margin-bottom: 10px;
   }
