--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -4,13 +4,13 @@ mat-card {
   width: 100%;
   margin: 2em auto;
   text-align: center;
-  height: 30vh;
+  height: 22vh;
   margin-top: 20px;
 }
 
 mat-form-field {
   display: block;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .center {
@@ -24,5 +24,6 @@ mat-form-field {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 80vh;
+  /* height: 80vh; for mozilla*/
+  margin-top: 8vh;
 }
