home page css improved

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
 			</div>
-			<h2 class="middle-title">Four ways to help you research easier</h2>
+			<h2 class="middle-title middle-title-cust">Four ways to help you research easier</h2>
 			<section class="row middle-banner">
 				<div class="col-sm-12 col-md-2 col-lg-1 nopadding">
 					<img src="../../../assets/images/page.svg" />
