dashboard css changes

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -56,7 +56,7 @@
                             <li class=""><a data-toggle="tab" href="#folder"> Reports</a></li>
                             <li class="analyze-list"><a data-toggle="tab" href="#analyze"> Analyze</a></li>
                         </ul>
-                        <div class="tab-content">
+                        <div class="tab-content tab-content-dashboard">
                             <div id="home" class="tab-pane fade in active">
                                 <p>File Type</p>
                                 <ul class="select-type">
@@ -800,7 +800,7 @@
         </div>
     </div>
     <div class="files">
-        <img src="../../../assets/images/text.png" class="d-inline" alt="icon" width="">
+        <img src="../../../assets/images/text.png" class="d-inline" alt="icon" width="250" height="350">
     </div>
 </div>
 
