--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,53 +1,59 @@
 
 
-  <div class="modal" id="login">
+  <div class="wrapper">
+      <div class="generic-body">
+        <div class="modal" id="login">
 
-      <div class="modal-dialog generic-modal center">
-
-          <div class="modal-content center-div">
-
-              <div class="modal-body">
-                  <form [formGroup]="loginFrom" (ngSubmit)="onSubmit()">
-
-                      <div class="form-group">
-                          <mat-card>
-                              <mat-card-content>
-                                      <!-- <h2>Log In</h2> -->
-                                      <mat-error *ngIf="loginInvalid">
-                                          The username and password were not recognised
-                                      </mat-error>
-                                      <mat-form-field class="full-width-input">
-                                          <input matInput placeholder="Email" formControlName="username" required>
-                                          <mat-error>
-                                              Please provide a valid email address
-                                          </mat-error>
-                                      </mat-form-field>
-                                      <mat-form-field class="full-width-input">
-                                          <input matInput color="white" type="password" placeholder="Password" formControlName="password" required>
-                                          <mat-error>
-                                              Please provide a valid password
-                                          </mat-error>
-                                      </mat-form-field>
-                                      <!-- <button class="login_button" mat-raised-button color="primary">Login</button> -->
-                                  
-                              </mat-card-content>
-                          </mat-card>
-                      </div>
-                      <div class="form-check">
-                          <div class="form-group">
-                              <input type="checkbox" id="check1">
-                              <label for="check1">keep me logged in</label>
-                              <a href="" class="forgot-psw">Forgot Password ?</a>
-                          </div>
-                      </div>
-                      <div class="btn-decoration"> <span>Login</span> </div>
-                      <button type="submit" class="btn btn-primary generic-btn">Login</button>
-                      <div class="sign-up-details">
-                          <a routerLink="/register" class="nav-link signup-btn"> Sign Up</a> <span>If you don't have an account.</span>
-                      </div>
-                  </form>
-
-              </div>
-          </div>
+            <div class="modal-dialog generic-modal center">
+      
+                <div class="modal-content center-div">
+      
+                    <div class="modal-body">
+                        <form [formGroup]="loginFrom" (ngSubmit)="onSubmit()">
+      
+                            <div class="form-group">
+                                <mat-card>
+                                    <mat-card-content>
+                                            <!-- <h2>Log In</h2> -->
+                                            <mat-error *ngIf="loginInvalid">
+                                                The username and password were not recognised
+                                            </mat-error>
+                                            <mat-form-field class="full-width-input">
+                                                <input matInput placeholder="Email" formControlName="username" required>
+                                                <mat-error>
+                                                    Please provide a valid email address
+                                                </mat-error>
+                                            </mat-form-field>
+                                            <mat-form-field class="full-width-input">
+                                                <input matInput color="white" type="password" placeholder="Password" formControlName="password" required>
+                                                <mat-error>
+                                                    Please provide a valid password
+                                                </mat-error>
+                                            </mat-form-field>
+                                            <!-- <button class="login_button" mat-raised-button color="primary">Login</button> -->
+                                        
+                                    </mat-card-content>
+                                </mat-card>
+                            </div>
+                            <div class="form-check">
+                                <div class="form-group">
+                                    <input type="checkbox" id="check1">
+                                    <label for="check1">keep me logged in</label>
+                                    <a href="" class="forgot-psw">Forgot Password ?</a>
+                                </div>
+                            </div>
+                            <div class="btn-decoration"> <span>Login</span> </div>
+                            <button type="submit" class="btn btn-primary generic-btn">Login</button>
+                            <div class="sign-up-details">
+                                <a routerLink="/register" class="nav-link signup-btn"> Sign Up</a> <span>If you don't have an account.</span>
+                            </div>
+                        </form>
+      
+                    </div>
+                </div>
+            </div>
+        </div>
+      
       </div>
   </div>
+  
