forgot password and authguard

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -39,7 +39,7 @@
                                 <div class="form-group">
                                     <input type="checkbox" id="check1">
                                     <label for="check1">keep me logged in</label>
-                                    <a href="" class="forgot-psw">Forgot Password ?</a>
+                                    <a routerLink="/forgot-password" class="forgot-psw">Forgot Password ?</a>
                                 </div>
                             </div>
                             <div class="btn-decoration"> <span>Login</span> </div>
