--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
                             <li class="nav-item">
                                 <!-- check todo keep if else logic-->
                                 <!-- {% if  not request.user.is_authenticated %} -->
-                                <a *ngIf="!isLoggedIn" routerLink="/login" class="nav-link">Login</a>
+                                <a *ngIf="!isLoggedIn" routerLink="/login" class="nav-link">Login/Signup</a>
                                 <!-- {% else %} -->
                                 <a *ngIf="isLoggedIn" (click)="logout()" class="nav-link">Logout</a>
                                 <!-- {% endif %} -->
